# pandas_proj

./: README.md  pyproject.toml
data/: 75test.xlsx  data.json  data_index.json  data_split.json  data_tables.json  data_values.json  中国大学综合排名.csv  中国大学综合排名.xlsx
pandas_proj/other/: pdf_decrypt.py
pandas_proj/pandas_tutorial/: A_100如何从一个CSV文件中读取数据，将其中的数值数据进行聚合，并计算每个聚合后的组的中位数.py  A_10如何查看一个Pandas数据框的数据摘要统计信息？.py  A_11如何选择一个Pandas数据框的行？.py  A_12如何选择一个Pandas数据框的列？.py  A_13如何选择一个Pandas数据框的行和列？.py  A_14如何筛选一个Pandas数据框的行？.py  A_15如何筛选一个Pandas数据框的行和列？.py  A_16如何根据某一列的值对一个Pandas数据框进行排序？.py  A_17如何对一个Pandas数据框进行透视操作？.py  A_18如何对一个Pandas数据框进行聚合操作？.py  A_19如何对一个Pandas数据框进行合并操作.py  A_20如何在 Pandas 数据框中删除一列数据.py  A_21如何在 Pandas 数据框中添加一行数据.py  A_22如何在 Pandas 数据框中删除一行数据.py  A_23如何在 Pandas 数据框中选择某个范围内的行.py  A_24如何在 Pandas 数据框中选择某个范围内的行.py  A_25如何在 Pandas 数据框中按特定条件选择行.py  A_26如何在 Pandas 数据框中对某一列进行排序.py  A_27如何在 Pandas 数据框中计算某一列的总和.py  A_28如何在 Pandas 数据框中计算某一列的平均值.py  A_29如何在 Pandas 数据框中计算某一列的中位数.py  A_30如何在 Pandas 数据框中计算某一列的标准差.py  A_31如何在 Pandas 数据框中计算某一列的方差.py  A_32如何在 Pandas 数据框中查找最大值和最小值.py  A_33如何在 Pandas 数据框中查找特定行的最大值和最小值.py  A_34如何在 Pandas 数据框中重命名列名.py  A_35如何在 Pandas 数据框中替换特定值.py  A_36如何在 Pandas 数据框中将特定值替换为缺失值？.py  A_37如何在 Pandas 数据框中填充缺失值？.py  A_38如何在 Pandas 数据框中删除缺失值？.py  A_39如何在 Pandas 中使用聚合函数？.py  A_40如何在 Pandas 中创建一个空数据帧？.py  A_41如何在 Pandas 中进行分组和聚合？.py  A_42如何在 Pandas 中进行数据类型转换？.py  A_43如何使用 Pandas 中的迭代方法.py  A_44如何使用 Pandas 中的交叉表.py  A_45如何在 Pandas 中使用重塑（reshape）数据.py  A_46如何在 Pandas 中使用变因子（factorize）函数.py  A_47如何在 Pandas 中创建随机日期？.py  A_48如何在 Pandas 中使用字符串函数.py  (+51 more)
