[tool.poetry]
name = "pandas-proj"
version = "0.1.0"
description = ""
authors = ["lokcoffee <fernandoshui@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pypdf2 = "^3.0.1"
pypdf = "^5.1.0"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "http://mirrors.aliyun.com/pypi/simple/"
